--- a/sendmail.html
+++ b/sendmail.html
@@ -24,6 +24,7 @@
 <body>
 
   <h1>Gracias por contactarnos</h1>
+  <p>Nos pondremos muy rápidamente en contácto con usted</p>
 
   <div class="d-grid gap-2 d-md-flex justify-content-md-end my-5">
     <button class="btn btn-primary me-md-2" type="button">
@@ -32,23 +33,19 @@
   </div>
 
 
-<!-- footer -->
+  <!-- footer -->
 
-<footer class="bg-dark text-center text-light p-4">
-  <p class="mb-0">
-    Todos los Derechos reservados- G64 2024  </p>
-</footer>
+  <footer class="bg-dark text-center text-light p-4">
+    <p class="mb-0">
+      Todos los Derechos reservados- G64 2024 </p>
+  </footer>
 
-<script
-  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-  crossorigin="anonymous"
-></script>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-  integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-  crossorigin="anonymous"
-></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 
 
 </body>
